--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,10 @@
-<% if current_user %>
-  Signed in as <%= current_user.name %>!
-  <%= link_to "Sign out", signout_path %>
-<% else %>
-  <%= link_to "Sign in with Facebook", "/auth/facebook" %>
+<div class="container">
+  <% if current_user %>
+    <h1>Thanks for supporting us, <%= current_user.name %>!</h1>
+    <p><%= link_to "Sign out", signout_path %></p>
+
+  <% else %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook" %>
+
 <% end %>
+</div>
