--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>ID #</th>
       <th>Name</th>
+      <th>Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= user.id %></td>
         <td><%= user.name %></td>
+        <td><%= user.email %></td>
       </tr>
     <% end %>
   </tbody>
