home page update

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,9 +24,9 @@
     <br />
 
     <div class="center">
-      <h3>From Amy Nadel:</h3>
+      <h3>From Amy Nadel and Julia Kaminski:</h3>
       <p>
-        So Julia and I are really serious about fighting for block scheduling for the upcoming school year or the year after that. We are reaching out to the Student Life Subcommittee, Student Liaison, superintendent, individual Board of Education members, and are planning to attend a Board of Education meeting in the near future. We’ve decided to create a petition, and we want all your signatures (for the people who are pro-block scheduling). We are proposing an 8-day block schedule with 6 periods each day (53 minutes each), 4 minutes between classes, 4 minute homeroom, 25 minute lunch, and a class-lab (87 minutes) in the middle of the day.
+        We are both really serious about fighting for block scheduling for the upcoming school year or the year after that. We are reaching out to the Student Life Subcommittee, Student Liaison, superintendent, individual Board of Education members, and are planning to attend a Board of Education meeting in the near future. We’ve decided to create a petition, and we want all your signatures (for the people who are pro-block scheduling). We are proposing an 8-day block schedule with 6 periods each day (53 minutes each), 4 minutes between classes, 4 minute homeroom, 25 minute lunch, and a class-lab (87 minutes) in the middle of the day.
         Please sign in with Facebook above if you would like your name on the petition (meaning you are in favor of block scheduling) or message Julia or I privately on Facebook. But to be fair we’ve created a list of both the pros and cons of having block scheduling:
       </p>
     </div>
